adicionando formGroup no register

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,26 +1,31 @@
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form [formGroup]="form" (submit)="submit()">
     <h1 class="h3 mb-3 fw-normal">Register</h1>
 
     <div class="form-floating">
-      <input type="text" class="form-control" placeholder="First Name">
+      <input formControlName="first_name" type="text" class="form-control" placeholder="First Name">
       <label>First Name</label>
     </div>
 
     <div class="form-floating">
-      <input type="text" class="form-control" placeholder="Last Name">
+      <input formControlName="last_name" type="text" class="form-control" placeholder="Last Name">
       <label>Last Name</label>
     </div>
 
     <div class="form-floating">
-      <input type="password" class="form-control" placeholder="Password">
+      <input formControlName="email" type="email" class="form-control" placeholder="Email">
+      <label>Email</label>
+    </div>
+
+    <div class="form-floating">
+      <input formControlName="password" type="password" class="form-control" placeholder="Password">
       <label>Password</label>
     </div>
 
     <div class="form-floating">
-      <input type="password" class="form-control" placeholder="Password Confirm">
+      <input formControlName="password_confirm" type="password" class="form-control" placeholder="Password Confirm">
       <label>Password Confirm</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
   </form>
 </main>
